<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/generalLayOut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SintomasFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habituales"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkFiebre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fiebre" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkTosSeca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tos_seca" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkCansancio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cansancio" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poco_comunes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkMolestiasDolores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/molestias_y_dolores" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkDolorGarganta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dolor_de_garganta" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkDiarrea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diarrea" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkConjuntivitis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conjuntivitis" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkDolorCabeza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dolor_de_cabeza" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkPerdidaOlfatoGusto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_rdida_del_sentido_del_olfato_y_o_del_gusto" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkErupciones"
                        android:layout_width="334dp"
                        android:layout_height="wrap_content"
                        android:text="@string/erupciones_cut_neas_o_p_rdida_del_color_en_los_dedos_de_las_manos_y_o_de_los_pies" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/graves"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkDificultadRespirar"
                        android:layout_width="329dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dificultad_para_respirar_y_o_sensaci_n_de_falta_de_aire" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkPresionPecho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dolor_o_presi_n_en_el_pecho" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkIncapacidadHablar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incapacidad_de_hablar_o_moverse" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitEnd"
                        android:src="@drawable/ic_launcher_foreground"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>